[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualize_pixel_map"
version = "0.1.0"
description = "A package to visualize pixel hit time development from empirphot CSV data."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Tsviki Y. Hirsh", email = "tsviki@soreq.gov.il"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0"
]
[project.urls]
Homepage = "https://github.com/TsvikiHirsh/visualize_pixel_map"
Repository = "https://github.com/TsvikiHirsh/visualize_pixel_map"

[tool.setuptools.packages.find]
where = ["src"]
include = ["visualize_pixel_map*"]